install tinymce for angular in ionic4 project

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,4 +11,22 @@
     The world is your oyster.
     <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
   </div>
+  <editor apiKey="no-api-key"
+    initialValue="<p>This is the initial content of the editor</p>"
+    [init]="{
+          height: 500,
+          menubar: true,
+          plugins: [
+            'advlist autolink lists link image charmap print preview anchor',
+            'searchreplace visualblocks code fullscreen',
+            'insertdatetime media table charmap hr pagebreak nonbreaking anchor paste code help wordcount'
+          ],
+          toolbar:
+            'undo redo | formatselect | bold italic backcolor | \
+            alignleft aligncenter alignright alignjustify | \
+            bullist numlist outdent indent | removeformat | help'
+        }"
+  >
+
+  </editor>
 </ion-content>
